# beagle_rdf

./: .gitignore  ADMIN.md  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
config/: bootstrap.example.yaml  node.example.yaml  server.example.yaml  tdoa_calibration.example.yaml  tdoa_calibration_per_pair.example.yaml
docs/: TimingAnalysis.md  plateau-detection-tuning.md  setup-rspduo-debian.md  xcorr-improvement-plan.md
docs/design/: 01-overview.md  02-signal-processing.md  03-timing-model.md  04-sync-signal.md  05-event-reporting.md  06-hardware-options.md  07-platform-options.md
docs/research/: fm-sync-signal-options.md  rds-sync-implementation-plan.md
etc/: beagle-node.service  beagle-server.service
scripts/: analyze_fade_timing.py  analyze_xcorr_tdoa.py  bench_decimator.py  calibrate_pipeline_offset.py  capture_iq_fixture.py  check_sdr.py  check_target.py  colocated_pair_test.py  db_maintenance.py  export_fixtures.py  fit_tdoa_calibration.py  manage_nodes.py  measure_settling.py  mock_event_generator.py  mock_scenario_seattle.yaml  profile_pipeline.py  prototype_rds_sync.py  replay_iq.py  test_master_slave.py  verify_clock.py  verify_freq_hop.py  verify_rds_sync.py  verify_rspduo.py  verify_sync.py  watch_node_health.py  xcorr_harness.py
src/beagle_node/: __main__.py  main.py  version.py
src/beagle_server/: __init__.py  api.py  auth.py  config.py  db.py  main.py  map_output.py  pairing.py  solver.py  tdoa.py  watchdog.py
tests/: conftest.py
tests/fixtures/: README.md  three_node_baseline_2026_04_08.json
tests/integration/: test_auth.py  (+8 more)
(+55 files in other folders)
