[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "beagle-rdf"
version = "0.1.0"
description = "Beagle - Open Source Radio Direction Finding"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
sdr = [
    # SoapySDR Python bindings are installed via system package manager, not pip.
    # On Raspberry Pi OS: sudo apt install python3-soapysdr
    # On macOS (dev): brew install soapysdr && pip install soapysdr
    "pyrtlsdr>=0.3.0",   # RTL-SDR direct library binding for freq_hop mode
]
test = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-timeout>=2.3",
    "jsonschema>=4.21",
    "pytest-asyncio>=0.23",
]
server = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "folium>=0.17",
    "pyotp>=2.9",
]
dev = [
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.scripts]
beagle-node = "beagle_node.main:main"
beagle-server = "beagle_server.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
